--- a/app/src/main/res/layout/layout_floating_widget.xml
+++ b/app/src/main/res/layout/layout_floating_widget.xml
@@ -4,15 +4,17 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="5dp">
+    android:padding="8dp">
 
     <ImageView
         android:id="@+id/ic_main"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="#2300FFAE"
+        android:adjustViewBounds="false"
+        android:background="#85FF1100"
         android:contentDescription="@string/main_icon"
-        android:padding="5dp"
+        android:cropToPadding="false"
+        android:padding="10dp"
         android:src="@drawable/ic_baseline_android_24"
         android:visibility="visible" />
 
@@ -28,9 +30,11 @@
             android:id="@+id/btn_start"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#2300FFAE"
+            android:adjustViewBounds="false"
+            android:background="#85FF1100"
             android:contentDescription="@string/start_the_activity"
-            android:padding="5dp"
+            android:cropToPadding="false"
+            android:padding="10dp"
             android:src="@drawable/ic_baseline_play_circle_filled_24"
             android:visibility="visible" />
 
@@ -38,9 +42,11 @@
             android:id="@+id/btn_stop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#2300FFAE"
+            android:adjustViewBounds="false"
+            android:background="#85FF1100"
             android:contentDescription="@string/stop_the_activity"
-            android:padding="5dp"
+            android:cropToPadding="false"
+            android:padding="10dp"
             android:src="@drawable/ic_baseline_stop_circle_24"
             android:visibility="visible" />
 
@@ -49,9 +55,11 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="0dp"
-            android:background="#2300FFAE"
+            android:adjustViewBounds="false"
+            android:background="#85FF1100"
             android:contentDescription="@string/close_the_widget"
-            android:padding="5dp"
+            android:cropToPadding="false"
+            android:padding="10dp"
             android:src="@drawable/ic_baseline_close_24"
             android:visibility="visible" />
 
