--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,39 +2,33 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center_horizontal|center_vertical"
     android:orientation="vertical">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/open"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:onClick="openDialog"
+        android:text="打开悬浮窗" />
 
-        <Button
-            android:id="@+id/open"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="openDialog"
-            android:text="打开悬浮窗" />
-        <Button
-            android:id="@+id/close"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="closeDialog"
-            android:text="关闭悬浮窗" />
+    <Button
+        android:id="@+id/close"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="closeDialog"
+        android:text="关闭悬浮窗" />
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="openLog"
-            android:text="打开日志" />
-
-
-    </LinearLayout>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="openLog"
+        android:text="查看日志文件" />
 
     <TextView
         android:id="@+id/accessibility_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Accessibility状态：未加载" />
+        android:text="无障碍状态：未加载" />
 
 </LinearLayout>
