--- a/app/src/main/res/layout/layout_floating_widget.xml
+++ b/app/src/main/res/layout/layout_floating_widget.xml
@@ -3,6 +3,7 @@
     android:id="@+id/mainLayout"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:gravity="bottom"
     android:orientation="vertical"
     android:padding="0dp">
 
@@ -11,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="#00FFFFFF"
+        android:gravity="bottom"
         android:orientation="vertical"
         android:visibility="visible">
 
